# telemetry_ui

./: .credo.exs  .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  LICENSE.md  Makefile  README.md  dev.exs  mix.exs  package-lock.json  random_requests.sh
.github/workflows/: build_nif.yml  ci.yaml  ci.yml  publish.yml  release.yml
assets/: .eslintignore  .eslintrc  .eslintrc.json  .prettierignore  eslint.config.mjs  meta.json  package-lock.json  package.json  tailwind.config.js
assets/css/: app.css
assets/js/: app.js  app.ts
config/: config.exs
examples/: basic.exs
guides/: application-data.md  complex-config.md  configuration-reference.md  custom-ui.md  hot-reload.md  multi-metrics-endpoints.md  share.md  slack-digest.md  testing.md
lib/: telemetry_ui.ex
lib/telemetry_ui/: config.ex  event.ex  exceptions.ex  internal_metrics.ex  json.ex  metric.ex  metrics.ex  pruner.ex  reloader.ex  reporter.ex  scraper.ex  slug.ex  theme.ex  vega_lite_convert.ex  vega_lite_to_image.ex  write_buffer.ex
lib/telemetry_ui/adapter/: adapter.ex  ecto_postgres.ex
lib/telemetry_ui/backend/: backend.ex  ecto_postgres.ex  entry.ex
lib/telemetry_ui/digest/: digest.ex  slack.ex  worker.ex
lib/telemetry_ui/metrics/: average.ex  average_list.ex  average_over_time.ex  (+13 more)
native/vegaliteconvert/: Cargo.toml  Cross.toml  README.md
native/vegaliteconvert/src/: lib.rs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex  factory.ex  repo.ex
test/telemetry_ui/: digest_test.exs  ecto_postgres_test.exs  metrics_test.exs  web_test.exs  write_buffer_test.exs
(+37 files in other folders)
